# public

./: .env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sqlfluff  .user.yml  README.md  activity_log.md  dbt.db  dbt_project.yml  pyproject.toml  tax_validation2.ipynb
.github/workflows/: ci.yml  daily-activity.yml  sync-gitlab.yml  test.yml
config/: tax_config.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: calculate_percentage.sql
dbt/resources/tax_binance_2026/: DELIVERY_SUMMARY.md  DEVELOPER_GUIDE.md  FILE_MANIFEST.md  INDEX.md  POLISH_TAX_LAW_GUIDE.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  cli.py  main.py  models.py  nbp_provider.py  normalizer.py  processor.py  reporter.py  requirements.txt  tax_engine.py  tests.py
dbt/resources/tax_binance_manual_2026/: main.py
dbt/resources/tax_bybit_2026/: main.py
dbt/resources/tax_bybit_manual_2026/: final_summary_bybit.csv  main.py  nbp_cache.json  tax_bybit_ledger_2025.csv
dbt/resources/tax_unified_2026/: main.py
dbt/seeds/: sample_data.csv
dbt/seeds/Binance_2026_KG/: Binance_sample_UTC+2_KG.csv
dbt/seeds/Bybit_2026_AK/: AssetChangeDetails_uta_375404132_20250101_20251231_0.csv  (+1 more)
dbt/snapshots/: snp_sample_data.sql
dbt/tests/: test_positive_values.sql
models/: example.sql
scripts/: fake_commits.py  placeholder.py  run_dbt.py  tax_report.py
src/config/: settings.py
src/resources/: process_seeds.py
src/tax/: ARCHITECTURE.md  README.md  __init__.py  cli.py  config.py  nbp.py  processor.py  types.py  validation.py
tests/: test_tax_calculator.py
