[tool.poetry]
name = "data-project"
version = "0.1.0"
description = "Production-grade data analytics project"
authors = ["Aleksander Kun <alek.kunysz@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.0"
pandas = "^2.0.0"
requests = "^2.31.0"
PyYAML = "^6.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
torch = "^2.0.0"
prefect = "^2.0.0"
dbt-core = "^1.7.0"
dbt-sqlite = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"
black = "^23.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"