[tool.poetry]
name = "data-project"
version = "0.1.0"
description = ""
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.9.0"
dbt-duckdb = "^1.9.0"
polars = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.0"
pre-commit = "^3.6.0"
sqlfluff = "^3.5.0"
sqlfluff-templater-dbt = "^3.5.0"
